--- a/build
+++ b/build
@@ -5,6 +5,6 @@ VOLUME_NAME='robot-docker-volume'
 docker build -t $IMAGE_NAME .
 build=$!
 wait $build
-docker run -d --name $VOLUME_NAME -v $(pwd):/robot --shm-size=1gb $IMAGE_NAME:latest
+docker run -d --name $VOLUME_NAME -v $(pwd):/robot --shm-size=1024m $IMAGE_NAME:latest
 volume=$!
 wait $volume
